[gd_scene load_steps=6 format=3 uid="uid://dmye2wmvw6qg4"]

[ext_resource type="Script" path="res://player.gd" id="1_h427e"]
[ext_resource type="Script" path="res://player_hand.gd" id="2_jwxyi"]

[sub_resource type="Curve" id="Curve_6j0y3"]
_data = [Vector2(0, 0), 0.0, 3.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_ur021"]
min_value = -1.0
_data = [Vector2(0, -1), 0.0, 0.0, 0, 0, Vector2(0.5, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_gbjt7"]
properties/0/path = NodePath(".:player_hand")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="player" type="Node2D" groups=["player"]]
script = ExtResource("1_h427e")

[node name="player_hand" type="Node2D" parent="."]
script = ExtResource("2_jwxyi")
hand_curve = SubResource("Curve_6j0y3")
rotation_curve = SubResource("Curve_ur021")
max_rotation_degrees = 10
x_sep = 20
y_min = 50
y_max = -50

[node name="start_timer" type="Timer" parent="."]
one_shot = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_gbjt7")

[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]
